<resources>
    <string name="app_name">Juego</string>
    <string name="nombre">Introduce tu nombre de usuario</string>
    <string name="contraseña">Introduce la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="Descriptcion">Este es un juego de naves con una estetica nueva. Nuestros modelos son naves marinas que se encuentran en una mesa japonesa en vista cenital. Nuestro objetivo es eliminiar a el pulpo para ello nuestra nave podrá disparar ojos de colores. Pero cuidado, ellos intentaran acabar contigo antes de lo que esperas.</string>
    <string name="bienvenida">Hola usuario, gracias por usar la aplicación estos son los datos que debes proporcionarnos antes de empezar</string>
    <string name="email">Introduce tu correo electronico</string>
    <string name="tips">Tips</string>
    <string name="descripcion">Descripcion</string>
    <string name="salir">Salir</string>
    <string name="personajes">Personajes</string>
    <string name="ajustes">Ajustes</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="puntuacion">Este objeto nos lo encontraremos aleatoriamente en el mapa y nos sumará puntuacion</string>
    <string name="vida">Este objeto nos sumará vida cada vez que lo obtengamos</string>
    <string name="protagonista">Este es nuestro protagonista, es un pez metalico cuyo proposito es intentar escapar de el restaurante japones antes de que los clientes lo pidan para llevar, pero él no es el unico que está intentancdo escapar de el restaurante y sus enemigos traran de impedirselo</string>
    <string name="enemigo">Las rayas son la principal linea de defensa del boss ellas saben que no podrán escapar solas asi que decidieron unirse al boss para poder escpar, saben que no todas podrán escapar pero aun así seguiran intentandolo</string>
    <string name="boss">El pulpo siempre ha sido uno de los reyes de la comida japonesa y esta vez no iba a ser una excepcion, no se dejará ganar por un simple pez su mision es escapar y no le importa nada más, aceptó ayudar a las rayas para que le hagan más facil el trabajo, ya que el pez está mostrando bastante resistencia, más de la esperada. Esto no quiere decir que nuestro pulpo tenga ninguna intencion de ayudar realmente a las rayas.</string>
    <string name="tipdescripcion">Esta es nuestra seccion de tips donde te ayudaremos a conocer mejor el juego, para ello te facilitaremos la experiencia del mismo con novedades y trucos que serán publicados en este lugar, ademásde poder marcar los tips que has leido</string>
    <string name="tip1">Cuando chocas con un objeto de vida recuperas vida cada vez es decir que si te chocas más de una vez recuperaras dos veces vida</string>
    <string name="tip2">La puntiacion es completamete aleatoria por lo que no te extrañe si no encuentras en un buen rato más puntos</string>
    <string name="tip3">Tu personaje es más veloz que las rayas</string>
    <string name="version">Version 1.01</string>
    <string name="contacto">Envianos tu consulta con un correo a :raquel_zarco_apps1m1617@cev</string>
    <string name="infdes">Para el desarrollo de este juego nos hemos basado en el motor grafico de Unity porgrado en C# que se encuentra para la plataforma de pc. Decidimos este desarrollo para poder tener más accesibilidad al publico</string>
    <string name="seguroSalir">¿Estas seguro de que quieres salir de la aplicacion?</string>
    <string name="objetos">Objetos</string>
    <string name="perfil">Perfil</string>
    <string name="objtospuntos">Puntos</string>
    <string name="pez">Protagonista</string>
    <string name="pulpo">Boss</string>
    <string name="raya">Raya</string>
    <string name="explicacionperfil">hola usuario estos son los datos de tu cuenta</string>
    <string name="tipnuero">tip:1</string>
</resources>
