<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_formulario_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raquel.juego.activity.FormularioRegistroActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/nombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/nombre"
        android:layout_weight="0.08" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/contraseña"
        android:layout_weight="0.08" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:layout_weight="0.08"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/confirmar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/entrar"
        android:layout_weight="0.08" />

</LinearLayout>
