<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tips"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.raquel.juego.activity.TipsActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/descripciontips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipdescripcion"
        android:padding="15dp"/>
    <TextView
        android:layout_marginTop="120dp"
        android:id="@+id/tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip1"
        android:padding="15dp"/>
    <TextView
        android:layout_marginTop="200dp"
        android:id="@+id/tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip2"
        android:padding="15dp"/>
    <TextView
        android:layout_marginTop="280dp"
        android:id="@+id/tip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip3"
        android:padding="15dp"/>

    <Button
        android:layout_marginTop="320dp"
        android:id="@+id/btnCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
