<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.raquel.juego.fragments.AjustesFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/version"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/infpro"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infdes"
        android:padding="10dp" />

    <TextView
        android:layout_marginLeft="60dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto"
        android:padding="10dp"
        android:id="@+id/contacto" />

</FrameLayout>
